--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link type="image/png" sizes="120x120" rel="icon" href="/icon.png">
     <script src="https://kit.fontawesome.com/621e2dd331.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <title>Library</title>
@@ -29,8 +30,6 @@
         </footer>
     </aside>
     <main>
-        <h2 style="text-decoration: underline;">Book description</h2>
-        <div class="desc"></div>
         <h2 style="text-decoration: underline;">List of Book</h2>
         <div id="container">
         </div>
